# platform.core.api.system-settings

./: AUTHORS  CMakeLists.txt  NOTICE  capi-system-system-settings.manifest  capi-system-system-settings.pc.in  project.config  system-settings.manifest
TC/: _export_target_env.sh  config
TC/testcase/: Makefile  tslist  utc_system_settings.c
TC_gui/: Makefile  main.c  main.h
debian/: changelog  control  rules
doc/: system_settings_doc.h
include/: system_settings.h  system_settings_json.h  system_settings_private.h  system_settings_ringtones.h
packaging/: capi-system-system-settings.changes  capi-system-system-settings.spec
src/: system_setting_platform.c  system_settings.c  system_settings_json.c  system_settings_ringtones.c  system_settings_vconf.c
system-settings-util/: CMakeLists.txt
system-settings-util/include/: system_settings_util.h
system-settings-util/src/: system_settings_util.c
